[package]
name = "conn_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flatbuffers = "23.5"
shared_memory = "0.12"
url = "2.5"
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"
thiserror = "1.0"
